experiment/openrouter-run/stage3-rac/zero_shot/compile_logs/EchoIntLoop.log
warning: [options] system modules path not set in conjunction with -source 11
/Users/tiancheng/Documents/Software Validation/verification-project/experiment/openrouter-run/stage3-jml/zero_shot/EchoIntLoop/EchoIntLoop.java:11: error: Expected loop specifications while in JML: loop_variant is not a loop specification keyword
          @ loop_variant x - i;
            ^
1 error
1 warning
